--- a/react-ui/src/App.css
+++ b/react-ui/src/App.css
@@ -1,8 +1,8 @@
 body {
   font-family: Roboto, sans-serif;
-  background: #f2f2f2;
   color: #757575;
   margin: 0px;
+  direction: rtl;
 }
 
 .container {
@@ -206,4 +206,16 @@ footer .small-button.medium {
   to {
     text-shadow: 2px 4px 4px rgba(0, 0, 0, 0.55);
   }
+}
+
+.center-text {
+  text-align: center;
+}
+
+.title {
+  font-size: 30px;
+}
+
+.subtitle {
+  font-size: 24px;
 }
