--- a/react-ui/src/App.css
+++ b/react-ui/src/App.css
@@ -9,6 +9,7 @@ body {
   flex-direction: column;
   height: 100vh;
   justify-content: space-around;
+  padding: 20px 0;
 }
 
 .buttons {
@@ -28,12 +29,12 @@ body {
   justify-content: center;
 }
 
-.gallert-content {
+.gallery-content {
   display: block;
   min-height: 1px;
-  max-height: 200px;
+  max-height: 100vh;
   width: 100%;
-  border: 1px solid #ddd;
+  border: 0px solid #ddd;
   overflow: auto;
 }
 
@@ -78,11 +79,7 @@ input[type="file"] {
 }
 
 img {
-  max-height: 420px;
-  max-width: 420px;
-  padding: 10px;
-  border: 1px dashed #999;
-  object-fit: contain;
+  object-fit: scale-down;
 }
 
 /* Loading */
@@ -226,9 +223,13 @@ footer .small-button.medium {
   }
 }
 
+.upload-container {
+  height: 20vh;
+}
 .upload-image {
   display: flex;
   width: 100%;
+  height: 100px;
   border: none;
   cursor: pointer;
 }
