--- a/react-ui/src/App.css
+++ b/react-ui/src/App.css
@@ -29,11 +29,16 @@ body {
   justify-content: center;
 }
 
+.gallery-wrapper {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+
 .gallery-content {
   display: block;
   min-height: 1px;
   max-height: 100vh;
-  width: 100%;
   border: 0px solid #ddd;
   overflow: auto;
 }
